assets/css/style.css
*{
  margin: 0;
  padding: 0;
  border: 0;
}
/*----Navigation----*/
.navbar-brand{
  font-family: 'Megrim', cursive;
  font-size: 3em;
  padding: 5px;
}
.navbar-dark .navbar-brand{
color:#3f95c3;
}

.navbar-dark .navbar-nav .nav-link{
color:#3f95c3;
}
.navbar-brand img{
  margin-left:20px;
}
.nav-item{
  font-family: 'Megrim', cursive;
  font-size: 1.5em;
  margin-left:30px;
}
.bg-dark {
    border-bottom: 4px solid #3f95c3;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
}
/*source: https://codepen.io/pant0ne/pen/KRbGvy*/
/*----body----*/
body{
  font-family:'Cairo', sans-serif;
}
#intro{
  font-size:1.25em;
  justify-content:center;
}
.image-container{
  text-align:center;
}
#intro-image{
  max-height: 700px;
  max-width: 480px;
  margin:80px;
  border: solid 2px #3f95c3;
}
#intro-text-title {
  font-size: 2.5em;
  margin-bottom: 40px;
  text-align: center;
}
.text-container{
  margin: 80px;
  text-align:center;
}
#unesco-image{
  width:300px;
  height:300px;
}
#search{
  margin:40px 40px 0 40px;
  padding-bottom:60px;
  padding-top:40px;
  text-align:center;
  border-top: solid 2px #3f95c3;
  background-color: aliceblue;
}
.search-criteria{
  background-color: aliceblue;
  margin:0 40px;
  text-align:center;
}

/* https://www.w3schools.com/howto/howto_css_animated_search.asp */
.mdb-select.md-form{
  width: 200px;
  -webkit-transition: width 0.4s ease-in-out;
  transition: width 0.4s ease-in-out;
  border: solid 2px #3f95c3;
  border-radius: 5px;
}

.mdb-select.md-form:focus{
  width: 100%;
  border: solid 2px #3f95c3;
}
#button-container{
  justify-content:center;
  background-color: aliceblue;
  margin: 0 40px;
}
button{
  text-align:center;
  width:200px;
  margin:40px;
}
/*----footer----*/
footer{
  border-top: solid 2px #3f95c3; 
}
footer img{
  width:50px;
  height:50px;
  margin:10px;
}
.copyright p{
 text-align: end;
}
/*----map----*/
div#map {
  min-height: 1000px;
  margin:40px;
  border:solid 2px #3f95c3;
  }

